--- a/index.html
+++ b/index.html
@@ -4,23 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="drop_down" id="dropDown">
       <h1>dictionary</h1>
-      <img id="button" src="images/drop down icon.png" alt="icon">
+      <img id="button" src="images/drop down icon.png" alt="icon" />
       <div class="dictionary">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-
+          <li>
+            a book or electronic resource that lists the words of a language
+            (typically in alphabetical order) and gives their meaning, or gives
+            the equivalent words in a different language, often also providing
+            information about pronunciation, origin, and usage.
+          </li>
+          <li>
+            a reference work on a particular subject, the items of which are
+            typically arranged in alphabetical order.
+          </li>
+          <li>
+            a set of words or other text strings made for use in applications
+            such as spelling checkers.
+          </li>
         </ul>
       </div>
     </div>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script.js"></script>
